--- a/apps/templates/_helpers/_header.html
+++ b/apps/templates/_helpers/_header.html
@@ -1,9 +1,9 @@
 <header>
-    <h1>Django base project</h1>
+    <h1>Gues the number Game</h1>
 </header>
 
 <nav>
     <a href="{% url 'base:home_page' %}"> Home </a>
     <a href="{% url 'base:about' %}"> About Us </a>
-    <a href="{% url 'users:user_list' %}"> Our Members</a>
+    <a href="{% url 'users:user_list' %}"> Play </a>
 </nav>
