--- a/apps/templates/_helpers/_header.html
+++ b/apps/templates/_helpers/_header.html
@@ -5,5 +5,5 @@
 <nav>
     <a href="{% url 'base:home_page' %}"> Home </a>
     <a href="{% url 'base:about' %}"> About Us </a>
-    <a href="{% url 'users:user_list' %}"> Play </a>
+    <a href="{% url 'words:gamewords_list' %}"> Play </a>
 </nav>
