--- a/apps/templates/words/gamewords_form.html
+++ b/apps/templates/words/gamewords_form.html
@@ -2,12 +2,7 @@
 
 {% block content %}
     <h1>
-        {% if is_update %}
-            Update
-        {% else %}
-            Create
-        {% endif %}
-        user
+        Create new gamer
     </h1>
 
     <form method="POST">
@@ -15,11 +10,7 @@
         {{ form.as_p }}
 
         <button type="submit">
-            {% if is_update %}
-                Update
-            {% else %}
                 Create
-            {% endif %}
         </button>
     </form>
 {% endblock %}
