--- a/apps/templates/words/gamewords_form.html
+++ b/apps/templates/words/gamewords_form.html
@@ -2,7 +2,7 @@
 
 {% block content %}
     <h1>
-        Create new gamer
+        Update new gamer
     </h1>
 
     <form method="POST">
@@ -10,7 +10,7 @@
         {{ form.as_p }}
 
         <button type="submit">
-                Create
+                Update
         </button>
     </form>
 {% endblock %}
